--- a/index.ipynb
+++ b/index.ipynb
@@ -42,10 +42,13 @@
     "import numpy as np\n",
     "\n",
     "def exp_pdf(mu, x):\n",
-    "    pass\n",
+    "    decay_rate = 1 / mu\n",
+    "    return decay_rate * np.exp(-decay_rate * x)\n",
     "    \n",
+    "\n",
     "def exp_cdf(mu, x):\n",
-    "    pass"
+    "    decay_rate = 1 / 4\n",
+    "    return 1 - np.exp(-decay_rate * x)"
    ]
   },
   {
