--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "exp_cdf()\n",
     "\n",
     " # Expected Output: 0.7442708400868994"
    ]
