Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_cdf()\n",
+    "exp_cdf(22)\n",
     "\n",
     " # Expected Output: 0.7442708400868994"
    ]
