Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,13 +73,13 @@
        "0.9994469156298522"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp_cdf(22,30)\n",
+    "exp_cdf(1/22,30)\n",
     "\n",
     " # Expected Output: 0.7442708400868994"
    ]
