Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "    \n",
     "\n",
     "def exp_cdf(mu, x):\n",
-    "    decay_rate = 1 / 4\n",
+    "    decay_rate = 1 / mu\n",
     "    return 1 - np.exp(-decay_rate * x)"
    ]
   },
@@ -64,22 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9994469156298522"
+       "0.7442708400868994"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp_cdf(1/22,30)\n",
+    "exp_cdf(22,30)\n",
     "\n",
     " # Expected Output: 0.7442708400868994"
    ]
