--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "exp_cdf(22,30)\n",
     "# Expected Output: 0.00958241148834099"
    ]
   },
