--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_pdf(44,38)\n",
+    "exp_cdf(6,38)\n",
     "# Expected Output: 0.7364028618842733"
    ]
   },
