--- a/index.ipynb
+++ b/index.ipynb
@@ -155,11 +155,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05210775245981355"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "exp_cdf(8,7)\n",
+    "exp_pdf(8,7)\n",
     "# Expected Output: 0.05210775245981355"
    ]
   },
