--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower_bound = None\n",
+    "lower_bound = exp_pdf(7,9)\n",
     "upper_bound  = None\n",
     "\n",
     "print(\"Probability of earthquake before 5 weeks: {}%\".format(lower_bound * 100))\n",
