--- a/index.ipynb
+++ b/index.ipynb
@@ -216,6 +216,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06993452279385044"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower_bound"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
