--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "lower_bound = exp_pdf(7,5)\n",
+    "lower_bound = exp_cdf(7,5)\n",
     "upper_bound  = exp_pdf(7,8)\n",
     "\n",
     "print(\"Probability of earthquake before 5 weeks: {}%\".format(lower_bound * 100))\n",
